fix ctx menu overflow screen and fix size of header and explorer

--- a/src/components/Explorer/explorer.scss
+++ b/src/components/Explorer/explorer.scss
@@ -1,5 +1,5 @@
 .explorer-container{
-    width: 18%;
+    width: 300px;
     height: 95vh;
     display: flex;
     flex-direction: column;
@@ -23,7 +23,6 @@
         margin-bottom: auto;
     }
     div{
-        max-height: 26px;
         margin-left: 5px;
         margin-top: auto;
         margin-bottom: auto;
