--- a/src/components/TextEditor/editor.scss
+++ b/src/components/TextEditor/editor.scss
@@ -1,9 +1,9 @@
 .editor-container{
     background-color: var(--editor-container);
     position: absolute;
-    top:5vh;
+    top:45px;
     bottom: 0;
-    left:18%;
+    left:300px;
     right:0;
     overflow-y:scroll;
 }
