--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -9,10 +9,15 @@
   padding: 0;
 }
 
+#root{
+  width: 100%;
+  overflow: hidden;
+}
+
 .Navgation-bar{
   display: flex;
   justify-content: space-evenly;
-  height: 5vh;
+  height: 45px;
   background-color: var(--navbar-color);
   text-align: center;
 }
